# fc-test

./: .gitignore  README.md
.github/workflows/: main.yaml
architecture/: README.md
coding/: README.md  pyproject.toml
coding/map_reduce/: pipeline.py
coding/map_reduce/io/: __init__.py  base.py  csv.py  file.py
coding/map_reduce/map/: __init__.py  base.py  csv.py  dict.py
coding/map_reduce/mapper/: __init__.py  base.py  mp.py  sequential.py
coding/map_reduce/reduce/: base.py  group.py
coding/map_reduce/reducer/: base.py
coding/pipe/: __main__.py  models.py  reducer.py  run.py
coding/tests/: test_basic.py  test_benchmark.py  test_bonus.py
coding/tests/data/: mappings_bonus.csv
coding/tests/snapshots/: basic.json  bonus.json
thinking/: README.md
