[tool.poetry]
name = "map-reduce"
version = "0.1.0"
description = ""
authors = ["German Arutyunov <germanarutyunov@gmail.com>"]
readme = "README.md"
packages = [{include = "map_reduce"}, {include = "pipe"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
coverage = {version = "^7.0.5", extras = ["toml"]}
mypy = "^0.991"
poethepoet = "^0.18.1"
no-implicit-optional = "^1.3"
autoflake = "^2.0.1"
ufmt = "^2.0.1"
perftester = "^0.5.0"

[tool.black]
line-length = 88
target-version = ["py39"]
include = "\\.pyi?$"
exclude = "tests/.*data"

[tool.usort]
exclude = "tests/.*data"

[tool.ufmt]
excludes = ["tests/data"]

[tool.coverage.run]
omit = ["tests/*"]

[tool.coverage.html]
directory = "coverage"

[tool.mypy]
files = "map_reduce|pipe"
python_version = "3.9"
exclude = "tests/.*data"
ignore_missing_imports = true

[tool.autoflake]
files = "map_reduce|pipe"
exclude = "tests/.*data"
quiet = true
in-place = true
recursive = true

[tool.poe.tasks]
_test = "coverage run -m pytest"
_report = "coverage report"
_html = "coverage html"
_lcov = "coverage lcov"
_ufmt = "ufmt format ."
_ufmt_check = "ufmt check ."
_optional = "no_implicit_optional map_reduce"
_autoflake = "autoflake ."
_check_autoflake = "autoflake . --check"
_mypy = "mypy ."

[tool.poe.tasks.test]
help = "Run tests and report coverage (html and lcov)"
sequence = ["_test", "_report", "_html", "_lcov"]

[tool.poe.tasks.lint]
help = "Lint code"
sequence = ["_check_autoflake", "_ufmt_check", "_mypy"]

[tool.poe.tasks.fmt]
help = "Format code"
sequence = ["_optional", "_autoflake", "_ufmt"]